# pointcloud_annotator

./: CMakeLists.txt  package.xml
config/: pointcloud_annotator.yaml  pointcloud_annotator2.yaml
launch/: pointcloud_annotator.launch  pointcloud_annotator_points.launch
src/: pointcloud_annotator.cpp  publisher.cpp
srv/: Update.srv
